using Hermes.Models;

namespace Hermes.Repositories;

public class SfcResponseRepository(HermesContext db) : BaseRepository<SfcResponse>(db);